Fixing flags not showing correctly for brackets and in flat theme

--- a/app/assets/stylesheets/themes/flat/components/_flags.scss
+++ b/app/assets/stylesheets/themes/flat/components/_flags.scss
@@ -1,7 +1,7 @@
-.flag {
+img.flag {
   width: 16px;
   height: 11px;
-  background: url(shared/flags.png) no-repeat;
+  background: image_url('shared/flags.png') no-repeat;
   display: inline-block;
 }
 
