--- a/app/assets/stylesheets/themes/flat/pages/_contests.scss
+++ b/app/assets/stylesheets/themes/flat/pages/_contests.scss
@@ -111,11 +111,10 @@ table.brackets {
     padding: 0;
   }
 
-  .flag {
-    width: 44px;
+  td.flag {
+    width: 34px;
 
     img {
-      width: 24px;
       margin-left: 10px;
     }
   }
